--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "base-64": "^0.1.0",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "firebase": "^5.2.0",
+    "firebase-admin": "^5.12.1",
     "http": "0.0.0",
     "morgan": "^1.9.0",
     "nodemon": "^1.17.5",
